--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Inspirational Quotes</title>
+  <title>Fucking Inspirational Quotes</title>
 </head>
 <body>
 
@@ -13,14 +13,15 @@
 	<div class="pull-right">
 		<a id="random-quote-button" class="btn btn-large btn-info">Random Fucking Quote</a>
 	</div>
-	<h1>Here's Some Fucking Quotes</h1>
+
+	<h1>Quotes That Are Inspirational As Fuck!!!</h1>
 
   <div class="modal fade" id="random-quote-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Random Quote</h4>
+          <h4 class="modal-title">Random Fucking Quote</h4>
         </div>
         <div class="modal-body"></div>
       </div>
@@ -33,7 +34,11 @@
 	<form id="add-quote-form" class="form-horizontal" role="form">
 		<div id="validation-message" class="alert alert-danger hidden"></div>
 		<div id="author-shown" class="animate-left animate-left-collapsed">
-			<p class="lead text-muted" id="by-author">by <span id="author-shown-author"></span> <a id="author-shown-close" class="btn btn-default btn-xs" title="Remove filter">&times;</a></p>
+			<p class="lead text-muted" id="by-author">
+				by 
+				<span id="author-shown-name"></span> 
+				<a id="author-shown-close" class="btn btn-default btn-xs" title="Remove filter">&times;</a>
+			</p>
 		</div>
 	  <div id="author-form-group" class="form-group animate-left">
 	    <label for="inputAuthor" class="col-lg-2 control-label">Author</label>
@@ -49,7 +54,7 @@
 	  </div>
 	  <div class="form-group">
 	    <div class="col-lg-offset-2 col-lg-10">
-	      <button type="submit" class="btn btn-primary btn-lg">Add A Fucking Quote</button>
+	      <button type="submit" class="btn btn-primary btn-lg" id="addQuoteButton">Add A Fucking Quote</button>
 	    </div>
 	  </div>
 	</form>
@@ -59,7 +64,7 @@
 	<div id="quotes"></div>
 </div>
 
-<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="utility.js"></script>
 <script src="main.js"></script>
