updated quotes exercise

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <heading>
 	<div class="pull-right">
-		<a id="random-quote-button" class="btn btn-large btn-info">Random Fucking Quote</a>
+		<a id="random-quote-button" class="btn btn-large btn-info">Random Fucking Quote. DON'T PRESS ME I'M FUCKING BROKEN</a>
 	</div>
 
 	<h1>Quotes That Are Inspirational As Fuck!!!</h1>
